[project]
name = "rag-domain-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "flashrank>=0.2.10",
    "langchain>=0.3.25",
    "langchain-core>=1.2.19",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "pypdf>=5.4.0",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "uvicorn>=0.42.0",
    "fastapi>=0.135.3",
]
